--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Create Release
       uses: marvinpinto/action-automatic-releases@latest
       with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        repo_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         automatic_release_tag: "latest"
         prerelease: false
         title: "Model"
